--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,9 @@ allprojects {
         jcenter()
         mavenCentral()
         maven { url "https://jitpack.io" }
+        maven {
+            url = "https://plugins.gradle.org/m2/"
+        }
     }
 }
 
