--- a/krichtexteditor/build.gradle
+++ b/krichtexteditor/build.gradle
@@ -1,16 +1,17 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'org.jetbrains.dokka-android'
+apply plugin: 'maven-publish'
 
-ext {
+project.ext {
     // This configuration will result in:
     // compile '<groupId>:<artifactId>:<libVersion>'
-    groupId = 'com.ebolo' // package name of the project
+    groupId = 'com.github.leeonardoo' // package name of the project
     artifactId = "krichtexteditor" // module name of the library
     libVersion = "0.0.6"
 }
-version = libVersion
-group = groupId
+version = project.libVersion
+group = project.groupId
 
 android {
     compileSdkVersion 30
@@ -75,4 +76,23 @@ dependencies {
 dokka {
     outputFormat = 'html'
     outputDirectory = "$buildDir/javadoc"
+}
+
+// Because the components are created only during the afterEvaluate phase, you must
+// configure your publications using the afterEvaluate() lifecycle method.
+afterEvaluate {
+    publishing {
+        publications {
+            // Creates a Maven publication called "release".
+            release(MavenPublication) {
+                // Applies the component for the release build variant.
+                from components.release
+
+                // You can then customize attributes of the publication as shown below.
+                groupId = project.groupId
+                artifactId = project.artifactId
+                version = project.libVersion
+            }
+        }
+    }
 }
