--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,9 +8,8 @@ on:
     branches:
       - master
   pull_request:
-    push:
-      branches:
-        - master
+    branches:
+      - master
 
 jobs:
   build-android:
@@ -20,10 +19,14 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: true
-      - name: Build the app
-        run: ./gradlew build
-      - name: Build
-        run: bash ./gradlew assembleRelease
+      - name: Setup Java 11
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'temurin'
+          java-version: '11'
+          cache: 'gradle'
+      - name: Build App
+        run: bash ./gradlew --no-daemon clean assembleRelease
       - name: Artifact
         uses: actions/upload-artifact@v2
         with:
